# RTMW_NTURGB

./: .gitignore  README.md  main.py  pyproject.toml  requirements.txt  vpn.sh
configs/: rtmw_ntu60.json
manifests/: ntu60_rgb.example.json
src/rtmw_ntu60/: __init__.py  download.py  extract.py  ntu.py  pipeline.py  train.py
